--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "ngx-socket-io": "^4.2.0",
+    "p2": "^0.7.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
@@ -30,6 +31,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/p2": "^0.7.39",
     "@types/uuid": "^8.3.4",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
